# buflib

./: CMakeLists.txt  README.md  main.cpp  timing.cpp
buf/: bufapi.cu  bufapi.h  bufcore.cu  bufcore.h
